syntax = "proto3";

package hello;

// Define the service
service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
  rpc add (addRequest) returns (addResponse);
  rpc idGetter(idRequest) returns (idResponse);
}

// Define the request and response message types
message HelloRequest {
  string name = 1;
}
message addRequest {
  int32 number = 1;
}

message addResponse {
  int32 result = 1;
}

message HelloResponse {
  string message = 1;
}

message idRequest {
  int32 Id = 1;
}

message info {
  int32 id = 1;
  string name = 2;
}

message idResponse {
  info details = 1;
}
